fix: visiblity of tabbar in media and bottom inset for scrolling (#1010)
* fix: visiblity of tabbar in media and bottom inset for scrolling

* chore : lint

* fix Mobile App > Webcard builder > Tooltip "Tap on a section of your Webcarda" - remove the "a" #1005

* fix #974

* fix Mobile Application > View Statistics > clicking on the next or previous value should be possible (today, only the swipe is activated to navigate in statistics) #986

chore: lint

fix : remove png icon n ot use anymore

fix: forgot to remove the accesor for icon social removed

* fix: icon web

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -1115,6 +1115,10 @@
     "defaultMessage": "Text",
     "description": "CoverEditionScreen bottom menu label for Text tab"
   },
+  "NJtjrA": {
+    "defaultMessage": "Tap on a section of your WebCard to modify it",
+    "description": "Toast info message that appears when the user is in webcard edit mode for the first time"
+  },
   "NTkvNY": {
     "defaultMessage": "First name",
     "description": "ProfileForm first name textinput label"
@@ -2906,10 +2910,6 @@
   "x/HwUu": {
     "defaultMessage": "Take a picture",
     "description": "Accessibility label of the camera tabs in image picking wizzard"
-  },
-  "x1P4jT": {
-    "defaultMessage": "Tap on a section of your WebCarda to modify it",
-    "description": "Toast info message that appears when the user is in webcard edit mode for the first time"
   },
   "x288ev": {
     "defaultMessage": "Unknown error - Please retry",
