feat: Add app translation system (#1029)
* feat: Add app translation system

* fix dir issue

* fix git ignore issue

* fix build

--- a/packages/i18n/turbo.json
+++ b/packages/i18n/turbo.json
@@ -6,12 +6,19 @@
       "dependsOn": ["build:app", "build:web"]
     },
     "build:app": {
-      "inputs": ["src/app/**/*.json"],
-      "outputs": ["compiled/app/**"]
+      "inputs": ["src/app/*.json"],
+      "outputs": ["compiled/app/**"],
+      "dependsOn": ["prepare"]
     },
     "build:web": {
-      "inputs": ["src/web/**/*.json"],
-      "outputs": ["compiled/web/**"]
+      "inputs": ["src/web/*.json"],
+      "outputs": ["compiled/web/**"],
+      "dependsOn": ["prepare"]
+    },
+    "prepare": {
+      "inputs": ["src/*.json"],
+      "outputs": ["src/app/*.json", "src/web/*.json"],
+      "cache": false
     }
   }
 }
