--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -5,8 +5,9 @@
   "types": "index.d.ts",
   "main": "index.js",
   "scripts": {
-    "build:app": "formatjs compile-folder --ast src/app compiled/app",
-    "build:web": "formatjs compile-folder --ast src/web compiled/web",
+    "prepare": "node ./scripts/prepare.js",
+    "build:app": "formatjs compile-folder --format simple --ast src/app compiled/app",
+    "build:web": "formatjs compile-folder --format simple --ast src/web compiled/web",
     "clean": "rm -rf node_modules && rm -rf compiled"
   },
   "dependencies": {
