--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -8,6 +8,11 @@
     "prepare": "node ./scripts/prepare.js",
     "build:app": "formatjs compile-folder --format simple --ast src/app compiled/app",
     "build:web": "formatjs compile-folder --format simple --ast src/web compiled/web",
+    "extract:app": "formatjs extract '../app/src/**/*.ts*' --out-file src/appMessages.json --id-interpolation-pattern [sha1:contenthash:base64:6]",
+    "extract:web": "formatjs extract '../web/src/**/*.ts*' --out-file src/webMessages.json --id-interpolation-pattern [sha1:contenthash:base64:6]",
+    "extract": "yarn extract:app && yarn extract:web",
+    "push": "node ./scripts/pushTranslations.js",
+    "pull": "node ./scripts/pullTranslations.js",
     "clean": "rm -rf node_modules && rm -rf compiled"
   },
   "dependencies": {
