--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/i18n",
-  "version": "0.5.15-canary.183",
+  "version": "0.5.16",
   "private": true,
   "types": "index.d.ts",
   "main": "index.js",
